deploy: 8625a3358420530cc8cb1d3bb087666a718fa340

--- a/index.html
+++ b/index.html
@@ -124,13 +124,17 @@ Because Meshroom projects are <strong>versioned</strong>, you can push and <stro
 </ul>
 <h3 id="as-a-developer-painless-dx-to-build-and-publish-custom-product-additions">As a developer : painless DX to build and publish custom product additions</h3>
 <p>Many cybersecurity platforms offer extensibility capabilities via <strong>plugins</strong>, custom formats, custom rules, custom actions, <em>etc</em>. Here again, there's no accepted standard and every vendor defines its own approach (YAML files, python code, no-code workflows, <em>etc</em>). Yet, products interoperability often rely on <strong>contributing custom additions</strong> to one or both ends. Of course, this scope is often badly documented, and developers are left with trial-and-error quasi-reverse ninja approaches to understand how to make product A talk to product B. In the end, you'll eventually succeed in getting a working plugin, but then face the un-coordinated maze of <strong>homologation processes</strong> each vendor mandates to make your contribution <strong>public</strong>.</p>
-<p>Meshroom helps cybersecurity vendors to expose a <strong>single standard contribution model</strong> for:
-* setting up <strong>custom software additions</strong> when interoperability mandates so
-* compiling everything into a product <strong>plugin</strong> suitable for publication
-* <strong>publishing</strong> as a PR to GitHub or other marketplaces</p>
-<p>Meshroom also ease the tedious "playground" phase where developers need to <strong>send</strong> test data to their trial 3rd-party instances, <strong>trigger</strong> remote commands from their workstation, <strong>watch</strong> results, make changes to their integration in an agile continous development workflow:
-* <code>meshroom produce</code> helps you sending data through plugged integrations
-* <code>meshroom watch</code> helps you watching data flowing through a plugged integration</p>
+<p>Meshroom helps cybersecurity vendors to expose a <strong>single standard contribution model</strong> for:</p>
+<ul>
+<li>setting up <strong>custom software additions</strong> when interoperability mandates so</li>
+<li>compiling everything into a product <strong>plugin</strong> suitable for publication</li>
+<li><strong>publishing</strong> as a PR to GitHub or other marketplaces</li>
+</ul>
+<p>Meshroom also ease the tedious "playground" phase where developers need to <strong>send</strong> test data to their trial 3rd-party instances, <strong>trigger</strong> remote commands from their workstation, <strong>watch</strong> results, make changes to their integration in an agile continous development workflow:</p>
+<ul>
+<li><code>meshroom produce</code> helps you sending data through plugged integrations</li>
+<li><code>meshroom watch</code> helps you watching data flowing through a plugged integration</li>
+</ul>
               
             </div>
           </div><footer>
@@ -179,5 +183,5 @@ Because Meshroom projects are <strong>versioned</strong>, you can push and <stro
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-06 08:45:56.876176+00:00
+Build Date UTC : 2025-01-06 08:47:41.746812+00:00
 -->
