--- a/index.html
+++ b/index.html
@@ -97,23 +97,23 @@
 Adopting the CSMA and Meshroom's philosophy means choosing an interconnected ecosystem of high-quality products with specialized scopes rather than a captive all-in-one solution.
 It then means :</p>
 <ul>
-<li>Adopting standard formats and protocols rather than proprietary ones to share data and informations between products (STIX, ECS, OCSF, OpenC2, syslog, CEF, <em>etc</em>)</li>
+<li>Adopting standard formats and protocols rather than proprietary ones to share data and information between products (STIX, ECS, OCSF, OpenC2, syslog, CEF, <em>etc</em>)</li>
 <li>Leveraging Open APIs to make your products communicate and control eachother</li>
-<li>Exploiting products' extensibility via plugins and open-source components to strengthen user-defined interoperability</li>
+<li>Exploiting products' extensibility via plugins and open-source components to encourage user-defined interoperability</li>
 </ul>
 <h2 id="who">Who ?</h2>
 <h3 id="as-a-vendor-fight-the-n-to-n-integration-curse">As a vendor : fight the N-to-N integration curse</h3>
-<p>Cybersecurity vendors know it well : integrating with other cybersecurity products consumes <strong>time and human resources</strong>. Integration teams feel so sad when every vendor has to spend those resources to develop an integration with every other vendor, without factorization : this is the <strong>N-to-N integration curse</strong>. This curse mostly originates from:</p>
+<p>Cybersecurity vendors know it well : integrating with other cybersecurity products burns <strong>time and human resources</strong>. Integration teams feel so sad when every vendor has to spend those resources developing an integration with every other vendor, without work factorization : this is the <strong>N-to-N integration curse</strong>. This curse mostly originates from:</p>
 <ul>
 <li>Poor adoption of <strong>standard formats, protocols and API layouts</strong> to interoperate cybersecurity solutions</li>
 <li>Lack of <strong>open resources and documentation</strong> to start communicating and controling a given product</li>
-<li>Small actors are overwhelmed by the numerous integration opportunities with major actors, but won't <strong>factorise</strong> their contribution to make one integration suit all 3rd-party products</li>
+<li>Small actors are overwhelmed by the numerous integration opportunities with major actors, but won't <strong>factorise</strong> their contributions to make one integration suit all 3rd-party products</li>
 <li>Every actor must keep <strong>hundreds of vendor-specific integrations</strong> up to date according to hundreds of <strong>non-coordinated roadmaps</strong> and constantly breaking changes</li>
 </ul>
 <p>Meshroom helps cybersecurity vendors <strong>build integrations</strong> between their products and other solutions, keeping the integration burden as low a possible.
-To do so, <code>meshroom</code> comes with a set of predefined <strong>product templates</strong> categorized according to Gartner's <a href="https://www.gartner.com/interactive/hc/5622491?ref=solrAll&amp;refval=433161127">Hype Cycle for Security Operations, 2024</a> that help you scaffolding full product definitions. By publishing your product's functional surface from one of this template, you encourage the adoption of open API layouts, formats and protocols. Whereby, you contributes to turn the N-to-N integration burden into an ideal repository of N reusable product definitions, where every new vendor can effortlessly plug with the N previously declared products.</p>
+To do so, <code>meshroom</code> comes with a set of predefined <strong>product templates</strong> categorized according to Gartner's <a href="https://www.gartner.com/interactive/hc/5622491?ref=solrAll&amp;refval=433161127">Hype Cycle for Security Operations, 2024</a> that help you scaffolding full product definitions. By publishing your product's functional surface from one of this template, you encourage the adoption of open API layouts, formats and protocols. Whereby, you contributes to turn the N-to-N integration burden into an ideal repository of N <strong>reusable product definitions</strong>, where every new vendor can effortlessly plug with the N previously declared products.</p>
 <h3 id="as-a-mssp-setup-a-full-cybersecurity-mesh-via-declarative-and-versionable-manifests">As a MSSP : setup a full cybersecurity mesh via declarative and versionable manifests</h3>
-<p>Setting up a SOC is also a time-consuming operation. Sadly, MSSPs in charge of many similar information systems will often <strong>repeat</strong> those very same time-consuming steps again and again, switching from one solution's configuration interface to another one's console. Eventually, this will involve wildly manipulating API keys and admin forms, resulting in errors, security holes and blind spots. Many MSSPs maintain a <strong>run book</strong> of manual setup steps, and most of them <strong>automate</strong> part of those steps to get a SOC up-and-running within, say, days or perhaps hours...</p>
+<p>Setting up a SOC is also a time-consuming operation. Sadly, MSSPs in charge of many similar information systems will often <strong>repeat</strong> those very same time-consuming steps again and again, switching from one solution's configuration interface to another one's admin console. Eventually, this will involve wildly manipulating API keys and admin forms, resulting in errors, security holes and blind spots. Many MSSPs maintain a <strong>run book</strong> of manual setup steps, and most of them <strong>automate</strong> part of those steps to get a SOC up-and-running within, say, days or perhaps hours...</p>
 <p>Meshroom helps DevSec operators to <strong>setup a full meshed SOC</strong> made of dozens of tenants in a single CLI command : <code>meshroom up</code>.
 Because Meshroom projects are <strong>versioned</strong>, you can push and <strong>share SOC architectures</strong> via GitHub or your favorite forge, while keeping trace of every setup and provisioning processes executed. You can think of <code>meshroom up</code> as the cyber mesh equivalent of Infrastructure-as-code's <code>terraform apply</code> or containerized stack's <code>docker compose up</code>.</p>
 <p>When your SOC grows to dozens of interoperated products, it becomes hard to visualize where data and controls flow between them. Meshroom provides an easy to use graph model documenting:</p>
@@ -130,7 +130,7 @@ Because Meshroom projects are <strong>versioned</strong>, you can push and <stro
 <li>compiling everything into a product <strong>plugin</strong> suitable for publication</li>
 <li><strong>publishing</strong> as a PR to GitHub or other marketplaces</li>
 </ul>
-<p>Meshroom also ease the tedious "playground" phase where developers need to <strong>send</strong> test data to their trial 3rd-party instances, <strong>trigger</strong> remote commands from their workstation, <strong>watch</strong> results, make changes to their integration in an agile continous development workflow:</p>
+<p>Meshroom also eases the tedious "playground" phase where developers need to <strong>send</strong> test data to their trial 3rd-party instances, <strong>trigger</strong> remote commands from their workstation, <strong>watch</strong> results, make changes to their integration in an agile continous development workflow:</p>
 <ul>
 <li><code>meshroom produce</code> helps you sending data through plugged integrations</li>
 <li><code>meshroom watch</code> helps you watching data flowing through a plugged integration</li>
@@ -183,5 +183,5 @@ Because Meshroom projects are <strong>versioned</strong>, you can push and <stro
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-06 08:47:41.746812+00:00
+Build Date UTC : 2025-01-06 09:00:43.180276+00:00
 -->
