--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/theme.css" />
     <link rel="stylesheet" href="css/theme_extra.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.8.0/styles/github.min.css" />
+        <link href="style.css" rel="stylesheet" />
     
       <script>
         // Current page data
@@ -187,5 +188,5 @@ Because Meshroom projects are <strong>versioned</strong>, you can push and <stro
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-01-06 17:38:56.868133+00:00
+Build Date UTC : 2025-01-06 17:42:59.472603+00:00
 -->
