--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -113,13 +113,27 @@
 cd &lt;path&gt;
 </code></pre>
 <p>This has scaffolded a local git repo with two directories: <code>products</code> and <code>instances</code></p>
+<p>We can list list our Products and Instances using</p>
+<pre><code class="language-bash">meshroom list products
+meshroom list instances
+</code></pre>
+<p>which confirms we have no products and no instances yet.</p>
 <h3 id="1-gather-knowledge-about-existing-products">1. Gather knowledge about existing products</h3>
 <p>In Meshroom's spirit, users may have already shared products definitions via, say, github.com, so you can browse public shared meshroom repos for products of interest to build your mesh.</p>
-<p>Imagine we want to incorporate a Sekoia.io SOC platform tenant into our mesh. We can leverage existing definitions from <a href="https://github.com/jeromefellus-sekoia/meshroom/tree/master/example/products/sekoia">https://github.com/jeromefellus-sekoia/meshroom/tree/master/example/products/sekoia</a>, by simply copying the subdirectory to our project's <code>products/</code> folder.</p>
+<p>Imagine we want to incorporate a Sekoia.io SOC platform tenant into our mesh. We can leverage existing definitions from <a href="https://github.com/jeromefellus-sekoia/meshroom/tree/master/example/products/sekoia">https://github.com/jeromefellus-sekoia/meshroom/tree/master/example/products/sekoia</a>, by simply copying the subdirectory to our project's <code>products/</code> folder:</p>
+<pre><code class="language-bash">mkdir -p tmp
+curl -L -o tmp.tar.gz https://github.com/jeromefellus-sekoia/meshroom/tarball/master
+tar -xzf tmp.tar.gz -C tmp
+mv tmp/*/example/products/sekoia products/sekoia
+rm -rf tmp
+</code></pre>
 <p>Happily, the sekoia product contains <code>@pull</code> hooks, allowing us to gather from Sekoia's official catalog the whole set of integrations available between Sekoia.io and 3rd-party products (here, so-called intake formats and playbook actions). Calling</p>
 <pre><code class="language-bash">meshroom pull sekoia
 </code></pre>
 <p>yields dozen of new products along with their own capabilities to the extent of what Sekoia.io can interop with. You'd probably need to gather and pull more product knowledge to enrich those 3rd-party product definitions and reach a sufficiently large and accurate capabilities graph to start instantiating a mesh from it.</p>
+<pre><code class="language-bash">meshroom list products
+</code></pre>
+<p>now shows many products available for instanciation.</p>
 <h3 id="2-integrate-your-product">2. Integrate your product</h3>
 <p>This tutorial assumes we're a vendor of a new product that didn't get a meshroom definition yet. So let's create it from scratch, or better, using one of the provided product capabilities templates, found under <a href="https://github.com/jeromefellus-sekoia/meshroom/tree/master/meshroom/templates/products">https://github.com/jeromefellus-sekoia/meshroom/tree/master/meshroom/templates/products</a></p>
 <pre><code class="language-bash">meshroom create product myedr --from edr
@@ -183,6 +197,10 @@ def setup_threat_search_api_via_myedr_plugin(integration: Integration, plug: Plu
 <li>product and integration manifests with settings</li>
 <li>how settings and secrets get prompted at <code>meshroom add</code> and <code>meshroom plug</code>. Note that you can (re-)configure those settings using <code>meshroom configure</code>, <em>e.g.</em>, when you'll instantiate your mesh on a different information system</li>
 </ul>
+<p>We can confirm the existence of our new product and integrations via</p>
+<pre><code class="language-bash">meshroom list products mye
+meshroom list integrations myedr
+</code></pre>
 <h3 id="3-create-a-mesh">3. Create a mesh</h3>
 <p>We'll create a basic mesh of 2 Instances:</p>
 <ul>
@@ -201,16 +219,23 @@ meshroom plug mysekoia myedr search_threat
 <p>Let's fix that</p>
 <pre><code class="language-bash">meshroom create integration sekoia myedr search_threat trigger --mode=push
 </code></pre>
+<p>and confirm it worked</p>
+<pre><code class="language-bash">meshroom list integrations --target-product myedr
+</code></pre>
 <p>Contrarily to the previous call to <code>meshroom create integration</code>, this has created many files under the <code>products/sekoia/integrations/myedr/</code> folder, where we may recognize an almost complete Sekoia.io custom playbook action as one can find examples at <a href="https://github.com/SEKOIA-IO/automation-library">https://github.com/SEKOIA-IO/automation-library</a>. This integration has been automatically scaffolded because Sekoia.io's vendor has defined a <code>@scaffold</code> hook for this kind of trigger. This hook generated all the boilerplate code required to build a custom playbook action that will trigger executions on 3rd-party APIs. All we need to do is to actually implement the TODOs left in the boilerplate. We won't cover this specific business here, but once you've coded your own logic, you can call again</p>
 <pre><code class="language-bash">meshroom plug mysekoia myedr search_threat
 </code></pre>
 <p>which should now succeed !</p>
+<pre><code class="language-bash">meshroom list instances
+meshroom list plugs
+</code></pre>
+<p>should then show 2 instances and 1 plug connecting them.</p>
 <p>We're done with the mesh creation part of this tutorial, it's now time to give it life...</p>
 <h3 id="4-meshroom-up">4. Meshroom up 🎉 !</h3>
 <p>Once you get a valid and satisfactory mesh of Instances and Plugs, you're ready to call</p>
 <pre><code class="language-bash">meshroom up
 </code></pre>
-<p>As for a docker compose stack, this command should be enough to setup and configure all your tenants, and connect the required interops to make them communicate according to the mesh's graph. Sometimes, <code>meshroom up</code> will prompt for additional settings and secret required for the runtime.</p>
+<p>As for a docker compose stack, this command should be enough to setup and configure all your tenants, and connect the required interops to make them communicate according to the mesh's graph. Sometimes, <code>meshroom up</code> will prompt for additional settings and secret required for the runtime. Another similary with docker compose or terraform stacks is that <code>meshroom up</code> is idempotent: if the mesh is already up, meshroom will tell you resources are already up. If only part of them are up, meshroom will setup those who are down, <em>etc</em>.</p>
 <p>To check everything works as expected, we can use two handy commands :</p>
 <pre><code class="language-bash">meshroom produce myedr mysekoia events
 </code></pre>
