deploy: 09708019747e1c71c3f0e2bb58ac502783c2fa3f

--- a/tutorial/index.html
+++ b/tutorial/index.html
@@ -166,7 +166,7 @@ executes:
 <ul>
 <li>Create the <code>products/myedr/search_threat.py</code> file containing</li>
 </ul>
-<pre><code class="language-py">from meshroom.decorators import setup
+<pre><code class="language-py">from meshroom.decorators import setup_executor
 from meshroom.model import Integration, Plug, Instance
 
 @setup_executor(&quot;search_threat&quot;)
